--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -5,4 +5,7 @@
   <li>
     <%= link_to 'Raw Payloads', raw_payloads_path %>
   </li>
+  <li>
+    <%= link_to 'Temporary Chats', temporary_chat_path %>
+  </li>
 </ul>
