--- a/app/views/temporary_chats/_message.html.erb
+++ b/app/views/temporary_chats/_message.html.erb
@@ -1,3 +1,3 @@
-<div class="py-2.5 px-4 rounded-lg border" data-chat-target="message">
+<div class="py-2.5 px-4 rounded-lg border prose" data-chat-target="message">
   <%= message %>
 </div>
